# sandbox

./: pnpm-lock.yaml  renovate.json
go/errortest/: go.mod  go.sum  main.go
rust/: .gitignore  Cargo.toml  package.json
rust/fixture/json/: noArgs2.json  object.json  react.json
rust/src/: lib.rs  test.rs  utils.rs
rust/swc-plugin-replace-t/: Cargo.toml  package.json
rust/swc-plugin-replace-t/fixture/json/: noArgs.json
rust/swc-plugin-replace-t/fixture/json/dir/: dir.json
rust/swc-plugin-replace-t/src/: cache.rs  config.rs  lib.rs  test.rs
rust/swc-plugin-replace-t/tests/__swc_snapshots__/src/test.rs/: component_interporation.js  dir.js  interporation.js  remove_import_stmt.js  simple.js
rust/tapl-7-ml/: Cargo.toml
rust/tapl-7-ml/src/: main.rs
typescript/cf-pages-nextjs/: package-lock.json  package.json  wrangler.jsonc
typescript/cf-pages-nextjs/src/: middleware.ts
typescript/envoy-grpc-web/: Makefile  buf.gen.yaml  compose.yaml
typescript/envoy-grpc-web/backend/: go.mod  go.sum
typescript/grpc-gateway/: buf.gen.yaml  package.json
typescript/next-ppr-1/: package-lock.json  package.json
typescript/nextjs-on-cloudrun/: next.config.ts  package-lock.json  package.json
typescript/nextjs-swc-plugin-example/: next.config.ts  package-lock.json  package.json
typescript/vike-app/: package.json  pnpm-lock.yaml  stats.html  vite.config.ts
typescript/vite-sandbox-1/: package.json  pnpm-lock.yaml  vite.config.ts
typescript/vite-sandbox-2/: package.json  plugin.ts  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
(+35 files in other folders)
