[package]
name = "swc-plugin-replace-t"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
serde_json = "1.0.90"
swc_ecma_parser = "0.124.2"
swc_trace_macro = "0.1.2"
swc_core = { version = "0.56.0", features = [
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "common",
  "ecma_quote"
] }
jsonpath-rust = "0.2.0"
regex = "1.7.0"

[dev-dependencies]
swc_ecma_transforms_react = "0.160.1"
testing = "0.31.27"

