[package]
name = "replace-t"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1.0.199"
serde_json = "1.0.116"
swc_ecma_parser = "0.144.1"
swc_trace_macro = "0.1.3"
swc_core = { version = "0.91.2", features = [
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "common",
  "ecma_quote"
] }
jsonpath-rust = "0.5.0"
regex = "1.7.0"

[dev-dependencies]
swc_ecma_transforms_react = "0.184.1"
testing = "0.35.24"